tests/baselines/reference/letDeclarations-scopes-duplicates2.errors.txt
file1.ts(1,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.
file2.ts(1,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.


==== file1.ts (1 errors) ====
    let var1 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
!!! related TS6203 file2.ts:1:5: 'var1' was also declared here.
    
==== file2.ts (1 errors) ====
    let var1 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
!!! related TS6203 file1.ts:1:5: 'var1' was also declared here.